--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,173 @@ body {
 main {
   flex: 1;
 }
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 40px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-center {
+  text-align: center;
+  flex: 1;
+  color: #e5e7eb;
+  font-size: 14px;
+}
+
+.footer-right {
+  display: flex;
+  gap: 15px;
+}
+
+.footer-right a {
+  color: #2dd4bf;
+  text-decoration: none;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.about {
+  padding: 80px 10%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.about h2 {
+  font-size: 32px;
+  color: #2dd4bf;
+  margin-bottom: 20px;
+}
+
+.about-text p {
+  line-height: 1.6;
+  color: #e5e7eb;
+  margin-bottom: 30px;
+}
+
+.svgs {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.svgs div {
+  width: 50px;
+  height: 50px;
+}
+
+.svgs img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+:root {
+  --square-size: 11px;
+  --square-gap: 3px;
+  --color-empty: #161b22;
+  --color-lvl1: #0e4429;
+  --color-lvl2: #006d32;
+  --color-lvl3: #26a641;
+  --color-lvl4: #39d353;
+}
+
+.contribution-card {
+  border: 1px solid #30363d;
+  background-color: #0d1117;
+  padding: 20px;
+  border-radius: 6px;
+  color: #8b949e;
+  font-family: sans-serif;
+  font-size: 12px;
+  display: inline-block;
+}
+
+.graph-container {
+  display: grid;
+  grid-template-areas:
+    ". months"
+    "days squares";
+  grid-template-columns: auto 1fr;
+  gap: 5px;
+}
+
+.months {
+  grid-area: months;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  padding: 0;
+  margin-bottom: 5px;
+}
+
+.days {
+  grid-area: days;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin-right: 10px;
+}
+
+.squares {
+  grid-area: squares;
+  display: grid;
+  /* Creates 52 columns for the weeks */
+  grid-template-columns: repeat(52, var(--square-size));
+  grid-template-rows: repeat(7, var(--square-size));
+  grid-auto-flow: column;
+  gap: var(--square-gap);
+  list-style: none;
+  padding: 0;
+}
+
+/* Color Levels */
+.squares li,
+.legend-squares li {
+  width: var(--square-size);
+  height: var(--square-size);
+  border-radius: 2px;
+  background-color: var(--color-empty);
+}
+
+li[data-level="1"] {
+  background-color: var(--color-lvl1);
+}
+li[data-level="2"] {
+  background-color: var(--color-lvl2);
+}
+li[data-level="3"] {
+  background-color: var(--color-lvl3);
+}
+li[data-level="4"] {
+  background-color: var(--color-lvl4);
+}
+
+/* Footer and Legend */
+.graph-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.legend {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.legend-squares {
+  display: flex;
+  gap: 3px;
+  list-style: none;
+  padding: 0;
+}
